maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: not found: value getMondeLongueur
    wl=getMondeLongueur();
       ^JediEscaper:10: error: not found: value setPosition
    				setPosition(i, l);
                                ^