maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
var wl=0;
var wh=0;
    wl=getMondeLongueur();
    wh=getMondeHauteur();
    def findBiscuit() {
    		for (i <- 1 to wl) {
    			for (l <- 1 to wh) {
    				setPosition(i, l);
    				if (estSurBiscuit()) {
    					setIndication(i, l, 0);
    					return true;
    				}
    			}
    		}
    	return false;
    }
   findBiscuit();
}
